--- a/css/style.scss
+++ b/css/style.scss
@@ -360,6 +360,41 @@ body {
             }
         }
     }
+    form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin: 4rem auto;
+            background: #ffd9002d;
+            width: fit-content;
+            padding: 2em;
+            border-radius: 8px;
+            box-shadow: 1px 1px 10px 2px goldenrod;
+            h3 {
+                margin-bottom: 1.3125rem;  
+            }
+            label {
+                color: #fff;
+            }
+            input, select {
+                padding: 0.5em;
+                margin-bottom: 0.7em;
+                border-radius: 8px;
+                border: none;
+                &::placeholder {
+                    font-family: 'Poppins', sans-serif;
+                }
+                &[type=submit] {
+                    background: #FFD700;
+                    border: none;
+                    text-transform: uppercase;
+                    font-size: 1.2rem;
+                    font-family: 'Poppins', sans-serif;
+                    margin-top: 1.5em;
+                }
+            }         
+        }
     footer {
         background: #222222;
         margin-top: 7.8rem;
@@ -391,35 +426,35 @@ body {
                     }
                 }
         }
-        form {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
-            h3 {
-                margin-bottom: 1.3125rem;  
-            }
-            label {
-                color: #fff;
-            }
-            input, select {
-                padding: 0.5em;
-                margin-bottom: 0.7em;
-                border-radius: 8px;
-                border: none;
-                &::placeholder {
-                    font-family: 'Poppins', sans-serif;
-                }
-                &[type=submit] {
-                    background: #FFD700;
-                    border: none;
-                    text-transform: uppercase;
-                    font-size: 1.2rem;
-                    font-family: 'Poppins', sans-serif;
-                    margin-top: 1.5em;
-                }
-            }         
-        }
+        // form {
+        //     display: flex;
+        //     flex-direction: column;
+        //     justify-content: flex-start;
+        //     align-items: flex-start;
+        //     h3 {
+        //         margin-bottom: 1.3125rem;  
+        //     }
+        //     label {
+        //         color: #fff;
+        //     }
+        //     input, select {
+        //         padding: 0.5em;
+        //         margin-bottom: 0.7em;
+        //         border-radius: 8px;
+        //         border: none;
+        //         &::placeholder {
+        //             font-family: 'Poppins', sans-serif;
+        //         }
+        //         &[type=submit] {
+        //             background: #FFD700;
+        //             border: none;
+        //             text-transform: uppercase;
+        //             font-size: 1.2rem;
+        //             font-family: 'Poppins', sans-serif;
+        //             margin-top: 1.5em;
+        //         }
+        //     }         
+        // }
     }
 }
 
